--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ra-postgraphile-client",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "react-admin data provider for postgraphile",
   "main": "index.js",
   "scripts": {
@@ -12,21 +12,25 @@
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
+    "ra-data-graphql": "^2.9.3",
+    "ra-core": "^2.9.3",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "graphql-tag": "^2.10.1"
   },
   "devDependencies": {
     "isomorphic-fetch": "^2.2.1",
     "pg": "^7.11.0",
-    "postgraphile": "^4.4.1",
-    "ra-core": "^2.9.3",
-    "ra-data-graphql": "^2.9.3",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.8"
+    "postgraphile": "^4.4.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/des-des/ra-postgraphile-client.git"
   },
   "homepage": "https://github.com/des-des/ra-postgraphile-client",
-  "keywords": ["react-admin", "postgrahile", "graphql"]
+  "keywords": [
+    "react-admin",
+    "postgrahile",
+    "graphql"
+  ]
 }
